2000-10-04  Adam Fedor  <fedor@gnu.org>

	* Source/Makefile.preamble (ADDITIONAL_CPPFLAGS): Add
	CONFIG_SYSTEM_DEFS.

2000-10-05  Fred Kiefer <FredKiefer@gmx.de>

	* Source/Unicode.m: 
	Changed available encodings if HAVE_ICONV is defined. This is
	still a static definition.
	
2000-10-02  Adam Fedor  <fedor@gnu.org>

	* configure.in: Update required libxml version to 2.2.3

2000-09-30  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSDistantObject.m ([GSDistantObjectPlaceHolder
	+respondsToSelector:]): implemented.
	* Source/NSProcessInfo.m ([NSProcessInfo +load]): bug fix for FreeBSD.
	* configure.in: enable_fake_main not enabled by default for FreeBSD-elf

2000-09-30  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/gnustep/base/Unicode.h:
	Merged in GetDefEncoding.h
	New function GetAvailableEncodings.
	* Source/Unicode.m: 
	Merged in GetDefEncoding.m
	New function GetAvailableEncodings.
	Updated the encoding arrays.
	* Headers/gnustep/base/GetDefEncoding.h:
	* Source/GetDefEncoding.m: 
	This are now obsolete and therfore removed.
	* Source/NSString.m: 
	Use GetAvailableEncodings in [availableStringEncodings]

2000-09-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([-initWithUTFString:length:]),
	([-initWithData:encoding]) create UTF strings as 8-bit strings if
	they actually only contain ascii characters.
	* Source/GSXML.m: Create strings from UTF8 data throughout.
	* Headers/gnustep/base/NSObject.h: (CREATE_AUTORELEASE_POOL) use +new
	to avoid a message despatch overhead (combine allocWithZone and init).

2000-09-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSCompatibility.m: Fix stupid error in last modification -
	missed part of method name.
	* Source/GNUmakefile: Fix to get headers installed in
	$(GNUSTEP_SYSTEM_ROOT)/Headers/Foundation again.
	* Source/Makefile.postamble:  Add code to install headers in 
	$(GNUSTEP_SYSTEM_ROOT)/Headers/gnustep/Foundation as well - is this
	really necessary?